fix z-index on post it note

--- a/src/components/note/index.scss
+++ b/src/components/note/index.scss
@@ -9,7 +9,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 5;
+  z-index: 2;
 
   &.red {
     color: $red;
